# crypto-risk-system

./: .env  .env.example  .gitignore  apply_rls.py  hi.txt  kill_locks.py  pyproject.toml  test_ingest.py  test_output.txt  test_results.txt
.github/workflows/: market_ingestion.yml  ohlcv_ingestion.yml  weekly_backfill.yml
app/: __init__.py  main.py
app/api/: __init__.py  deps.py  main.py
app/api/routes/: coin_risk.py  health.py  ingestion.py  market_risk.py  top_risky.py
app/core/: config.py  db.py
app/models/: __init__.py  coin.py  feature_metric.py  market_aggregate.py  market_snapshot.py  ohlcv_candle.py  risk_metric.py
app/repositories/: __init__.py  aggregate_repository.py  coin_repository.py  feature_repository.py  market_snapshot_repository.py  ohlcv_repository.py  risk_repository.py
app/services/: __init__.py  risk_pipeline_service.py
app/services/feature_engineering/: __init__.py  feature_service.py
app/utils/: logging.py
app/worker/: __init__.py  scheduler.py
crypto_risk_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
prompts/: api_strategy.md  cron_job.md  data_pipeline.md  dbstructure.md  environment.md  generate_architecture.md  refactor_ingestion_and_repos.md  risk_engine.md  run.md  supabase.md  system_audit.md  view_data.md
prompts/frontend/: 01_TECH_STACK.md  02_DESIGN.md  03_API.md  04_STATE.md  05_COMPONENT.md  06_LAYOUT.md
scripts/: init_db.py  run_backfill_once.py  run_market_once.py  run_ohlcv_once.py  run_worker.py
tests/: test_feature_engineering.py  test_risk_config_hash.py  test_risk_engine.py
(+10 files in other folders)
