[project]
name = "crypto-risk-system"
version = "0.1.0"
description = "Crypto market risk analytics backend — modular monolith"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.6.0",
    "psycopg[binary]>=3.2.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "alembic>=1.14.0",
    "uvicorn[standard]>=0.32.0",
    "numpy>=1.26.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
